// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Restore > should render the Existing Wallet notice step of the Restore flow if there is a userId saved in localStorage 1`] = `
<div
  class="onboarding-wrapper svelte-i0tbsw"
>
  <section>
    <div
      class="dusk-card dusk-card--gap-default"
    >
      <div
        class="dusk-card__header-container"
      >
        <header
          class="dusk-card__header"
          slot="header"
        >
          <div
            class="dusk-card__heading-container dusk-card__heading-container--warning-card"
          >
            <svg
              class="dusk-icon dusk-icon--size--default"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M12,2L1,21H23M12,6L19.53,19H4.47M11,10V14H13V10M11,16V18H13V16"
              />
            </svg>
            
             
            <h3
              class="h4"
            >
              Existing Wallet Detected
            </h3>
          </div>
        </header>
      </div>
       
      <div
        class="dusk-card__body-container"
      >
        <p>
          Initializing a new wallet will replace your existing local wallet cache,
      erasing any stored data. Ensure you have securely backed up your current
      wallet's mnemonic phrase to prevent loss. Proceeding without a backup can
      lead to irreversible loss of access to your assets.
        </p>
         
        <div
          class="actions svelte-3n8m2w"
        >
          <a
            aria-disabled="false"
            class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--tertiary dusk-anchor-button--size--default actions__action"
            href="/some-base-path/setup"
          >
            <span
              class="dusk-anchor-button__text"
            >
              Back
            </span>
            
          </a>
           
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default actions__action"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              Proceed
            </span>
          </button>
        </div>
      </div>
       
    </div>
    
  </section>
</div>
`;

exports[`Restore > should render the Mnemonic Authenticate step after accepting the Existing Wallet Notice and the Terms of Service 1`] = `
<div
  class="dusk-wizard dusk-wizard--full-height"
>
   
  <h2
    class="h1"
    slot="heading"
  >
    Enter
    <br />
     
    <mark>
      Mnemonic Phrase
    </mark>
  </h2>
   
  <div
    class="dusk-stepper dusk-stepper--variant--secondary"
    style="--columns: 5; --progress-width: 0%;"
  >
    <span
      aria-current="step"
      class="dusk-stepper__step dusk-stepper__step--processed"
    >
      1
    </span>
    <span
      class="dusk-stepper__step"
    >
      2
    </span>
    <span
      class="dusk-stepper__step"
    >
      3
    </span>
    <span
      class="dusk-stepper__step"
    >
      4
    </span>
    <span
      class="dusk-stepper__step"
    >
      5
    </span>
    
  </div>
  
   
  <div
    class="dusk-card dusk-card--gap-medium"
  >
    <div
      class="dusk-card__header-container"
    >
      <header
        class="dusk-card__header"
        slot="header"
      >
        <div
          class="dusk-card__heading-container"
        >
          <h3
            class="h4"
          >
            Enter your Mnemonic Phrase
          </h3>
           
        </div>
      </header>
    </div>
     
    <div
      class="dusk-card__body-container"
    >
      <div
        class="dusk-mnemonic"
      >
        <div
          class="dusk-mnemonic__actions-wrapper"
        >
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
            type="button"
          >
            <svg
              class="dusk-icon dusk-icon--size--default dusk-button__icon"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M19,20H5V4H7V7H17V4H19M12,2A1,1 0 0,1 13,3A1,1 0 0,1 12,4A1,1 0 0,1 11,3A1,1 0 0,1 12,2M19,2H14.82C14.4,0.84 13.3,0 12,0C10.7,0 9.6,0.84 9.18,2H5A2,2 0 0,0 3,4V20A2,2 0 0,0 5,22H19A2,2 0 0,0 21,20V4A2,2 0 0,0 19,2Z"
              />
            </svg>
            
             
            <span
              class="dusk-button__text"
            >
              Paste mnemonic phrase
            </span>
            
          </button>
           
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
            disabled=""
            type="button"
          >
            <svg
              class="dusk-icon dusk-icon--size--default dusk-button__icon"
              role="graphics-symbol"
              viewBox="0 0 24 24"
            >
              <path
                d="M10.5,7A6.5,6.5 0 0,0 4,13.5A6.5,6.5 0 0,0 10.5,20H14V18H10.5C8,18 6,16 6,13.5C6,11 8,9 10.5,9H16.17L13.09,12.09L14.5,13.5L20,8L14.5,2.5L13.08,3.91L16.17,7H10.5M18,18H16V20H18V18Z"
              />
            </svg>
            
             
            <span
              class="dusk-button__text"
            >
              Undo
            </span>
            
          </button>
        </div>
         
        <ol
          class="dusk-words"
        >
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
          <li
            class="dusk-words__word"
          >
            _____
          </li>
        </ol>
         
        <div
          class="dusk-mnemonic__authenticate-actions-wrapper"
        >
          <input
            class="dusk-textbox dusk-textbox-text"
            maxlength="8"
            placeholder="Enter word 1"
            type="text"
          />
          
           
          
        </div>
      </div>
    </div>
     
  </div>
  
   
  <div
    class="dusk-wizard__step-navigation"
  >
    <a
      aria-disabled="false"
      class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--tertiary dusk-anchor-button--size--default dusk-icon-button--labeled"
      href="/some-base-path/setup"
    >
      <svg
        class="dusk-icon dusk-icon--size--default dusk-anchor-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M20,11V13H8L13.5,18.5L12.08,19.92L4.16,12L12.08,4.08L13.5,5.5L8,11H20Z"
        />
      </svg>
      
       
      <span
        class="dusk-anchor-button__text"
      >
        Back
      </span>
      
      
    </a>
    
     
    <button
      class="dusk-button dusk-button--type--button dusk-button--variant--tertiary dusk-button--size--default dusk-icon-button--labeled"
      disabled=""
      type="button"
    >
      <span
        class="dusk-button__text"
      >
        Next
      </span>
       
      <svg
        class="dusk-icon dusk-icon--size--default dusk-button__icon"
        role="graphics-symbol"
        viewBox="0 0 24 24"
      >
        <path
          d="M4,11V13H16L10.5,18.5L11.92,19.92L19.84,12L11.92,4.08L10.5,5.5L16,11H4Z"
        />
      </svg>
      
    </button>
  </div>
  
  
   
  
   
  
   
  
   
  
</div>
`;

exports[`Restore > should render the Terms of Service step of the Restore flow if there is no userId saved in localStorage 1`] = `
<div
  class="onboarding-wrapper svelte-i0tbsw"
>
  <section>
    <div
      class="dusk-card dusk-card--gap-default"
    >
      <div
        class="dusk-card__header-container"
      >
        <header
          class="dusk-card__header"
          slot="header"
        >
          <div
            class="dusk-card__heading-container"
          >
            <h3
              class="h4"
            >
              Terms & Privacy Policy
            </h3>
             
          </div>
        </header>
      </div>
       
      <div
        class="dusk-card__body-container"
      >
        <p>
          Our 
          <a
            class="dusk-anchor dusk-anchor--on-surface"
            href="https://dusk.network/privacy-policy/"
            rel="noopener noreferrer"
            target="_blank"
          >
            Terms & Privacy Policy
          </a>
           govern your use of our services, including data handling and user responsibilities.
      Your privacy and security are our top priorities.
        </p>
         
        <div
          class="actions svelte-3n8m2w"
        >
          <a
            aria-disabled="false"
            class="dusk-anchor dusk-anchor--on-surface dusk-anchor-button dusk-anchor-button--variant--tertiary dusk-anchor-button--size--default actions__action"
            href="/some-base-path/setup"
          >
            <span
              class="dusk-anchor-button__text"
            >
              Cancel
            </span>
            
          </a>
           
          <button
            class="dusk-button dusk-button--type--button dusk-button--variant--primary dusk-button--size--default actions__action"
            type="button"
          >
            <span
              class="dusk-button__text"
            >
              Accept
            </span>
          </button>
        </div>
      </div>
       
    </div>
    
  </section>
</div>
`;
